# mlops101

./: .gitignore  README.md  pyproject.toml
pytorch-official-tutorial/: 2-datasets&dataloaders.ipynb  4-build-the-neural-network.ipynb  5-torch-autograd.ipynb  6-optimizing-model-params.ipynb  7-save-and-load-the-model.ipynb  model.pth
tutorials/introduction-to-pytorch/: 0-quickstart.ipynb  1-tensors.ipynb
