[tool.poetry]
name = "pytorch101"
version = "0.1.0"
description = ""
authors = ["Gyeongmin Ha <gaonrudal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
